AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/node-blue/nodes/notification
vendor01dir = $(libdir)/vendor-libs
vendor02dir = $(libdir)/vendor-libs/composer
vendor04dir = $(libdir)/vendor-libs/fabiang/xmpp
vendor05dir = $(libdir)/vendor-libs/fabiang/xmpp/src
vendor06dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Protocol
vendor07dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Protocol/User
vendor08dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Connection
vendor09dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Event
vendor10dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Stream
vendor11dir = $(libdir)/vendor-libs/fabiang/xmpp/src/EventListener
vendor12dir = $(libdir)/vendor-libs/fabiang/xmpp/src/EventListener/Stream
vendor13dir = $(libdir)/vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication
vendor14dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Util
vendor15dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Exception
vendor16dir = $(libdir)/vendor-libs/fabiang/xmpp/src/Exception/Stream
vendor18dir = $(libdir)/vendor-libs/psr/log
vendor19dir = $(libdir)/vendor-libs/psr/log/Psr
vendor20dir = $(libdir)/vendor-libs/psr/log/Psr/Log
vendor21dir = $(libdir)/vendor-libs/psr/log/Psr/Log/Test

vendor01_DATA = vendor-libs/autoload.php
vendor02_DATA = vendor-libs/composer/autoload_psr4.php vendor-libs/composer/autoload_namespaces.php vendor-libs/composer/autoload_real.php vendor-libs/composer/autoload_static.php vendor-libs/composer/LICENSE vendor-libs/composer/ClassLoader.php vendor-libs/composer/autoload_classmap.php vendor-libs/composer/installed.json
vendor04_DATA = vendor-libs/fabiang/xmpp/CHANGELOG.md vendor-libs/fabiang/xmpp/composer.json vendor-libs/fabiang/xmpp/LICENSE.md vendor-libs/fabiang/xmpp/README.md
vendor05_DATA = vendor-libs/fabiang/xmpp/src/Client.php vendor-libs/fabiang/xmpp/src/Options.php vendor-libs/fabiang/xmpp/src/OptionsAwareInterface.php
vendor06_DATA = vendor-libs/fabiang/xmpp/src/Protocol/ProtocolImplementationInterface.php vendor-libs/fabiang/xmpp/src/Protocol/Roster.php vendor-libs/fabiang/xmpp/src/Protocol/VCard.php vendor-libs/fabiang/xmpp/src/Protocol/ImplementationInterface.php vendor-libs/fabiang/xmpp/src/Protocol/BlockedUsers.php vendor-libs/fabiang/xmpp/src/Protocol/UnblockUser.php vendor-libs/fabiang/xmpp/src/Protocol/Register.php vendor-libs/fabiang/xmpp/src/Protocol/Message.php vendor-libs/fabiang/xmpp/src/Protocol/Presence.php vendor-libs/fabiang/xmpp/src/Protocol/DefaultImplementation.php vendor-libs/fabiang/xmpp/src/Protocol/BlockUser.php
vendor07_DATA = vendor-libs/fabiang/xmpp/src/Protocol/User/User.php
vendor08_DATA = vendor-libs/fabiang/xmpp/src/Connection/ConnectionInterface.php vendor-libs/fabiang/xmpp/src/Connection/AbstractConnection.php vendor-libs/fabiang/xmpp/src/Connection/SocketConnectionInterface.php vendor-libs/fabiang/xmpp/src/Connection/Socket.php
vendor09_DATA = vendor-libs/fabiang/xmpp/src/Event/EventInterface.php vendor-libs/fabiang/xmpp/src/Event/XMLEvent.php vendor-libs/fabiang/xmpp/src/Event/EventManager.php vendor-libs/fabiang/xmpp/src/Event/EventManagerInterface.php vendor-libs/fabiang/xmpp/src/Event/Event.php vendor-libs/fabiang/xmpp/src/Event/EventManagerAwareInterface.php vendor-libs/fabiang/xmpp/src/Event/XMLEventInterface.php
vendor10_DATA = vendor-libs/fabiang/xmpp/src/Stream/SocketClient.php vendor-libs/fabiang/xmpp/src/Stream/XMLStream.php
vendor11_DATA = vendor-libs/fabiang/xmpp/src/EventListener/BlockingEventListenerInterface.php vendor-libs/fabiang/xmpp/src/EventListener/EventListenerInterface.php vendor-libs/fabiang/xmpp/src/EventListener/Logger.php vendor-libs/fabiang/xmpp/src/EventListener/AbstractEventListener.php
vendor12_DATA = vendor-libs/fabiang/xmpp/src/EventListener/Stream/Roster.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/StartTls.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Session.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Bind.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/BlockedUsers.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Stream.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/AbstractSessionEvent.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Register.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/StreamError.php
vendor13_DATA = vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication/AuthenticationInterface.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication/DigestMd5.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication/Anonymous.php vendor-libs/fabiang/xmpp/src/EventListener/Stream/Authentication/Plain.php
vendor14_DATA = vendor-libs/fabiang/xmpp/src/Util/XML.php vendor-libs/fabiang/xmpp/src/Util/ErrorHandler.php
vendor15_DATA = vendor-libs/fabiang/xmpp/src/Exception/InvalidArgumentException.php vendor-libs/fabiang/xmpp/src/Exception/ErrorException.php vendor-libs/fabiang/xmpp/src/Exception/TimeoutException.php vendor-libs/fabiang/xmpp/src/Exception/RuntimeException.php vendor-libs/fabiang/xmpp/src/Exception/SocketException.php vendor-libs/fabiang/xmpp/src/Exception/XMLParserException.php vendor-libs/fabiang/xmpp/src/Exception/OutOfRangeException.php vendor-libs/fabiang/xmpp/src/Exception/ExceptionInterface.php
vendor16_DATA = vendor-libs/fabiang/xmpp/src/Exception/Stream/AuthenticationErrorException.php vendor-libs/fabiang/xmpp/src/Exception/Stream/StreamErrorException.php
vendor18_DATA = vendor-libs/psr/log/LICENSE vendor-libs/psr/log/composer.json vendor-libs/psr/log/README.md
vendor20_DATA = vendor-libs/psr/log/Psr/Log/LogLevel.php vendor-libs/psr/log/Psr/Log/InvalidArgumentException.php vendor-libs/psr/log/Psr/Log/LoggerAwareInterface.php vendor-libs/psr/log/Psr/Log/LoggerTrait.php vendor-libs/psr/log/Psr/Log/AbstractLogger.php vendor-libs/psr/log/Psr/Log/LoggerAwareTrait.php vendor-libs/psr/log/Psr/Log/LoggerInterface.php vendor-libs/psr/log/Psr/Log/NullLogger.php
vendor21_DATA = vendor-libs/psr/log/Psr/Log/Test/LoggerInterfaceTest.php

notificationdir = $(libdir)
notification_DATA = package.json xmpp.hni xmpp.php xmpp-server.hni xmpp-server.s.php

locale_endir = $(libdir)/locales/en
locale_en_DATA = locales/en-US/notification.json

locale_en_usdir = $(libdir)/locales/en-US
locale_en_us_DATA = locales/en-US/notification.json

locale_dedir = $(libdir)/locales/de
locale_de_DATA = locales/de-DE/notification.json

locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = locales/de-DE/notification.json

